--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:             Haylee Noelle Blog
+title:             Haylee Noelle's Blog
 email:             haylee.nigh@gmail.com
-description:       Blog
+description:       Musings of a UX Designer and Web Developer
 author:            Haylee Noelle
 baseurl:           "/blog"
 url:               "https://hayleenighbert.github.io/blog/"
